gl: no need to initialize a frame buffer object to upload an eglimage

Fix https://bugzilla.gnome.org/show_bug.cgi?id=729588